removed flippant because of z-index issues, mostly figured out new plugin approach that doesnt mess with js security boundaries

--- a/antioch/client/static/client/css/client.less
+++ b/antioch/client/static/client/css/client.less
@@ -118,6 +118,39 @@ h6.date {
   opacity: 0.3;
 }
 
+
+/*
+flip card
+*/
+.card-flip > div {
+  backface-visibility: hidden;
+  transition: transform 300ms;
+  transition-timing-function: linear;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  display: flex;
+}
+
+.card-front {
+  transform: rotateY(0deg);
+}
+
+.card-back {
+  transform: rotateY(180deg);
+  position: absolute;
+  top: 0;
+  background-color: #fff;
+}
+
+.card-flip.flipped .card-front {
+  transform: rotateY(-180deg);
+}
+  
+.card-flip.flipped .card-back {
+  transform: rotateY(0deg);
+}
+
 #observations {
     .jumbotron {
         padding: 10px;
